--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -41,21 +41,21 @@ $mobile-sidebar:
 
 $post:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". . . content content content content content content content content . . . ."
-	". . . content content content content content content content content . . . ."
+	". . . content content content content content content content content content . . ."
+	". . . content content content content content content content content content . . ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
 
 $mobile-post:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". . content content content content content content content content content . . . ."
-	". . content content content content content content content content content . . . ."
+	". content content content content content content content content content content content content content ."
+	". content content content content content content content content content content content content content ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
 
 $e-mobile-post:
 	". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". content content content content content content content content content content . . . ."
-	". content content content content content content content content content content . . . ."
+	". content content content content content content content content content content content content . ."
+	". content content content content content content content content content content content content . ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
