--- a/css/style.scss
+++ b/css/style.scss
@@ -23,8 +23,11 @@
 			// Side Bar Cell, Left
 			// Footer Cell
 
-	Page Components
+	Specific Page Components
 		./components/_page-components.scss
+			// Blog Previews
+			// Blog Content
+			// Pagination
 
 	FlexBox Classes
 		./components/_page-components.scss
@@ -64,6 +67,16 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+
+		margin-top: .5rem;
+	}
+}
+
+@media only screen and (max-width: variables.$small-breakpoint)
+{
+	.hero-cell
+	{
+		padding: 2rem;
 	}
 }
 
@@ -229,6 +242,11 @@
 .alignc-space-between
 {
 	align-content: space-between;
+}
+
+.alignc-center
+{
+	align-content: center;
 }
 
 .aligni-items-center
