added an archive file and comments file in the archive file I made the sidebar highlight the current archive you're on. also added the contact page. this will have to be more dynamic eventually. for now it's functioning, until further notice

--- a/css/components/_grid-layouts.scss
+++ b/css/components/_grid-layouts.scss
@@ -95,7 +95,7 @@ img
 
 	grid-template-columns: 1rem minmax(5rem, 6rem) repeat(12, 1fr) 1rem;
 
-	grid-template-rows: 100px minmax(4rem, max-content) auto 200px;
+	grid-template-rows: 100px auto 200px;
 
 	gap: 8px;
 
