--- a/css/style.scss
+++ b/css/style.scss
@@ -137,6 +137,12 @@
 		background-color: #fff;
 		color: black;
 	}
+
+	.current-category
+	{
+		background-color: #fff;
+		color: black;
+	}
 }
 
 @media only screen and (max-width: variables.$large-breakpoint)
