Fixed js issue, change php tags, fixed mobile menu issue, fixed mobile template issue js was erroring on certain pages, so I moved the relevant script to the page file <?php is annoying, so I  removed every single one and replaced it with only <? contact was hiding my mobile menu, so I z-indexed it over the top of it boom done had extra rows leftover in the mobile templates. Removed em

--- a/css/components/_page-components.scss
+++ b/css/components/_page-components.scss
@@ -88,6 +88,11 @@
 
 .blog
 {
+	a
+	{
+		color: black;
+	}
+
 	h1
 	{
 		text-align: center;
@@ -97,6 +102,11 @@
 	img
 	{
 		height: auto;
+	}
+
+	.comments-area
+	{
+		margin: 3rem 0;
 	}
 
 	.avatar
