--- a/css/components/_grid-layouts.scss
+++ b/css/components/_grid-layouts.scss
@@ -1,11 +1,15 @@
 @use 'grid-templates';
 @use '../src/variables';
 
+// Font Families
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
+
 // * Settings
 *
 {
 	margin: 0;
 	padding: 0;
+	font-family: 'Courier Prime', monospace;
 }
 
 img
