--- a/css/components/_navbar.scss
+++ b/css/components/_navbar.scss
@@ -40,7 +40,7 @@
 		border-radius: .25rem;
 	}
 	
-	.current-nav
+	.current-menu-item a, .current_page_parent a
 	{
 		background-color: white;
 		color: black;
@@ -74,7 +74,7 @@
 	}
 }
 
-.menu
+.dropdown_
 {
 	display: none;
 }
@@ -96,7 +96,7 @@
 // Navbar Media Query
 @media only screen and (max-width: variables.$large-breakpoint)
 {
-	.menu
+	.dropdown_
 	{
 		display: flex;
 	}
