added a header with no highlighted menu items couldn't figure out how to un highlight blog on the 404 page so I just made a new header that has no highlighted items, which is currently only being used there. also made the main headers title dynamic, more and more dynamic by the Daay. yeet

--- a/css/components/_navbar.scss
+++ b/css/components/_navbar.scss
@@ -58,7 +58,6 @@
 		background-color: black;
 
 		height: 1.5rem;
-		// padding: 2px;
 	}
 
 	#s
@@ -154,4 +153,10 @@
 // display: flex;
 flex-direction: column;
 flex-wrap: wrap;
+}
+
+.no-highlight .current-menu-item a, .no-highlight .current_page_parent a
+{
+	background-color: initial;
+	color: white;
 }
