--- a/css/style.scss
+++ b/css/style.scss
@@ -30,7 +30,9 @@
 	Specific Page Components
 		./components/_page-components.scss
 			// Blog Previews
+			// Major Blog Container
 			// Blog Content
+				// Comments
 			// Pagination
 
 	FlexBox Classes
