I guess I changed * to initial in the comments lol

--- a/css/components/_grid-layouts.scss
+++ b/css/components/_grid-layouts.scss
@@ -4,7 +4,7 @@
 // Font Families
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
-// * Settings
+// Initial Settings
 *
 {
 	margin: 0;
