--- a/css/components/_grid-layouts.scss
+++ b/css/components/_grid-layouts.scss
@@ -19,6 +19,11 @@ img
 }
 
 // **************************************************************************************************************
+
+// General Grid Variables
+
+$grid-columns: 1rem minmax(5rem, 7rem) repeat(12, 1fr) 1rem;
+
 // Index Page Template w/ Hero
 
 .grid-container-index
@@ -27,7 +32,7 @@ img
 
 	display: grid;
 
-	grid-template-columns: 1rem minmax(5rem, 6rem) repeat(12, 1fr) 1rem;
+	grid-template-columns: $grid-columns;
 
 	grid-template-rows: 100px calc(100vh - 140px) 1rem minmax(4rem, max-content) auto 200px;
 
@@ -61,7 +66,7 @@ img
 
 	display: grid;
 
-	grid-template-columns: 1rem minmax(5rem, 6rem) repeat(12, 1fr) 1rem;
+	grid-template-columns: $grid-columns;
 
 	grid-template-rows: 100px minmax(4rem, max-content) auto 200px;
 	
@@ -97,7 +102,7 @@ img
 
 	display: grid;
 
-	grid-template-columns: 1rem minmax(5rem, 6rem) repeat(12, 1fr) 1rem;
+	grid-template-columns: $grid-columns;
 
 	grid-template-rows: 100px auto 200px;
 
