--- a/css/style.scss
+++ b/css/style.scss
@@ -150,7 +150,7 @@
 		color: black;
 	}
 
-	.current-category a
+	.current-category a, .current-category
 	{
 		background-color: #fff;
 		color: black;
