--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -1,5 +1,5 @@
 // **************************************************************************************************************
-// Index Page Template w/ Hero
+// Index Page Templates w/ Hero
 
 $hero-index:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
@@ -20,7 +20,7 @@ $mobile-hero-index:
 ;
 
 // **************************************************************************************************************
-// Page Template w/ Sidebar
+// Page Templates w/ Sidebar
 
 $sidebar:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
@@ -37,7 +37,7 @@ $mobile-sidebar:
 ;
 
 // **************************************************************************************************************
-// Page Template w/ No Sidebar
+// Page Templates w/ No Sidebar
 
 $post:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
