--- a/css/components/_grid-layouts.scss
+++ b/css/components/_grid-layouts.scss
@@ -5,7 +5,7 @@
 
 // Universal Columns Variable
 
-$grid-columns: 1rem minmax(5rem, 7rem) repeat(12, 1fr) 1rem;
+$grid-columns: 1rem 13rem 1fr 12fr 1fr 1fr 1rem;
 
 // Index Page Layout w/ Hero
 
