--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -22,11 +22,18 @@ $mobile-hero-index:
 // **************************************************************************************************************
 // Page Templates w/ Sidebar
 
+// $sidebar:
+//   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
+// 	". lcell lcell . content content content content content content content content content . ."
+// 	". lcell lcell . content content content content content content content content content . ."
+// 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
+// ;
+
 $sidebar:
-  ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". lcell lcell . content content content content content content content content content . ."
-	". lcell lcell . content content content content content content content content content . ."
-	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
+  ". nav nav nav nav nav ."
+	". lcell . content content . ."
+	". lcell . content content . ."
+	"footer footer footer footer footer footer footer"
 ;
 
 $mobile-sidebar:
@@ -40,9 +47,9 @@ $mobile-sidebar:
 // Page Templates w/ No Sidebar
 
 $post:
-  ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". . . content content content content content content content content content . . ."
-	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
+". nav nav nav nav nav ."
+	". . content content . . ."
+	"footer footer footer footer footer footer footer"
 ;
 
 $mobile-post:
