fixed comments overgrowing mobile

--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -53,6 +53,6 @@ $mobile-post:
 
 $e-mobile-post:
 	". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". content content content content content content content content content content content content . ."
+	". content content content content content content content content content content content content content ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
