--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -24,8 +24,8 @@ $mobile-hero-index:
 
 $sidebar:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". lcell lcell . content content content content content content content content content . ."
-	". lcell lcell . content content content content content content content content content . ."
+	". lcell . content content content content content content content content content content . ."
+	". lcell . content content content content content content content content content content . ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
 
