--- a/css/components/_navbar.scss
+++ b/css/components/_navbar.scss
@@ -107,14 +107,12 @@
 		right: 1.7rem;
 		top: 108px;
 		
-		transition-duration: .4s;
+		transition-duration: .2s;
 
-		height: 0;
 		opacity: 0;
 		overflow: hidden;
 
-
-		padding: 8px;
+		padding: 8px 8px 0 8px;
 		background-color: variables.$main-color;
 		border-radius: .25rem;
 		border: solid black 3px;
