--- a/css/components/_page-components.scss
+++ b/css/components/_page-components.scss
@@ -172,9 +172,11 @@
 	// End Comments
 // End Blog Content
 
+
+// Wtf is this??
 .wp-her-img img
 {
-	height: calc(100vh-120px);
+	height: calc(100vh - 120px);
 	width: 100px;
 }
 
