--- a/css/components/_grid-templates.scss
+++ b/css/components/_grid-templates.scss
@@ -39,7 +39,7 @@ $mobile-sidebar:
 
 $post:
   ". nav nav nav nav nav nav nav nav nav nav nav nav nav ."
-	". . . content content content content content content content content content . . ."
+	". . content content content content content content content content content . . . ."
 	"footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer"
 ;
 
