fixed big image on front-page, added a joke

--- a/css/style.scss
+++ b/css/style.scss
@@ -137,7 +137,11 @@ Mixins
 {
 	.main-content-cell>.column>img
 	{
-		width: 80vw;
+		width: 100%;
+	}
+	.main-content-cell .column
+	{
+		width: 100%;
 	}
 }
 
